tests/NormalTests/paczka1/fuzzy1/79701843.err
Error in line 1: infPBDxXG A535 7,0
Error in line 13: ENXXG3uM A294 90,2
Error in line 14: ENXXG3uM A535 72,7
Error in line 10: ZJIF7 A294 9,3
Error in line 18: ZJIF7 A535 48,4
